# tenstream

./: .codedocs  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakeLists.txt  Doxyfile  Doxyfile.in  README  README.zmaw  Readme.md  compile.sh
C_wrapper/: .c_tenstream.F90.swp  .c_tenstream.h.swp  CMakeLists.txt  c_tenstream.F90  c_tenstream.h  ex1.c  ex2.c  f2c_pprts.F90  f2c_pprts.h  f2c_pprts_rrtm.F90  f2c_solver_ids.h  f2c_tenstr_rrtm.F90  f2c_tenstream.F90
c_wrapper/: CMakeLists.txt  f2c_pprts.F90  f2c_pprts.h  f2c_pprts_rrtm.F90  f2c_solver_ids.h  opp.c  pprts.c  pprts_rrtmg.c  set_global_optprop.c
disort/: BDREF.f  BDREF.f90  CMakeLists.txt  DISOBRDF.f90  DISORT.f  DISOTESTAUX.f  DISOTESTAUX.f90  ERRPACK.f90  LINPAK.f90  RDI1MACH.f90  disort.f  disort.f90  disotest.f90  ex_disort_tenstr.F90  tenstream_disort.F90
disort/doc/: .README.txt.swp  AUTHORS.txt  DISORT.txt  DISOTEST.txt  README.txt
ecckd/: CMakeLists.txt  ecckd_base.F90  ecckd_optprop.F90  ecckd_pprts.F90
ecckd/data/: ecckd-1.0_lw_climate_fsck-16_ckd-definition.nc  ecckd-1.0_lw_climate_fsck-32_ckd-definition.nc
examples/: CMakeLists.txt
examples/box_cld/: CMakeLists.txt  box_cld.F90  box_cld.f90
examples/geometric_coeffs_dir2diff_hacks/: CMakeLists.txt  geometric_coeffs_dir2diff_hacks.F90
examples/geometric_coeffs_num_intervals/: geometric_coeffs_num_intervals.F90
examples/libRadtran_cld_file/: CMakeLists.txt  run_i3rc1_example.sh  uclales_cld_file.F90  uvspec_cld_file.F90  uvspec_cld_file.f90
examples/plexrt/: CMakeLists.txt  ex_plex_ex_fish.F90  ex_plex_ex_rrtmg_icon.F90  ex_plex_fish.F90  ex_plex_rrtmg_fish.F90  ex_plex_rrtmg_icon.F90  ex_plex_specint_fish.F90  plex2rayli.F90  plex_ex1.F90  plex_ex2.F90  plex_ex3.F90  plex_ex4.F90  plex_ex_fish.F90  plex_ex_rrtmg_fish.F90  plex_ex_rrtmg_icon.F90  plex_fish.F90  plex_rrtmg_fish.F90  plex_rrtmg_icon.F90  plex_specint_fish.F90  tenstream.options
examples/pprts/: CMakeLists.txt  box_cld.F90  buildings_input.py  ex_pprts_box_cld.F90  ex_pprts_buildings.F90  ex_pprts_ex1.F90  ex_pprts_repwvl_lw_sw.F90  ex_pprts_rrtm_buildings.F90  ex_pprts_rrtm_iterations.F90  ex_pprts_rrtm_lw_sw.F90  ex_pprts_rrtmg_tree.F90  ex_pprts_specint_buildings.F90  ex_pprts_specint_buildings_from_file.F90  ex_pprts_specint_lw_sw.F90  ex_pprts_specint_lw_sw_from_dump.F90  ex_pprts_specint_tree.F90  pprts_box_cld.F90  pprts_buildings.F90  pprts_buildings_rayli.F90  pprts_ex1.F90  pprts_repwvl_lw_sw.F90  pprts_rrtm_buildings.F90  pprts_rrtm_iterations.F90  pprts_rrtm_iterations.f90  pprts_rrtm_lw_sw.F90  pprts_rrtmg_tree.F90  pprts_specint_buildings.F90  pprts_specint_buildings_from_file.F90  pprts_specint_lw_sw.F90  pprts_specint_lw_sw_from_dump.F90  pprts_specint_tree.F90
examples/pprts_ex1/: CMakeLists.txt  pprts_ex1.F90  pprts_ex1.f90
examples/pprts_hill/: CMakeLists.txt  evaluate_runtimes.py  hill.sh  hill_double_precision.sh  hill_single_precision.sh  plotting_results.py  pprts_hill.F90  tenstream_hill_2_librad.py
examples/python/: boxmc.py  i3rc.py  rrtm_lw_sw.py
examples/rrtm_lw_sw/: CMakeLists.txt  pprts_rrtm_lw_sw.F90  pprts_rrtm_lw_sw.f90  rrtm_lw_sw.f90
examples/wetterstein_ts/: CMakeLists.txt  interpolate.py  prep_wetterstein_example.sh  progress_nc_output.py  refold_cycluc_bc_nc_output.py  wetterstein.F90  wetterstein.f90  wetterstein_input.py
plexrt/: CMakeLists.txt  createLUT_plex_5_8.f90  gen_fish_plex.F90  gen_lwc_inp.py  gen_plex_from_icon.F90  gen_regular_plex.F90  icon_grid.F90  icon_plex_utils.F90  nca_multi_tri.F90  nca_multi_tri.F90~  plex2rayli.F90  plex_ex1.F90  plex_ex2.F90  plex_ex3.F90  plex_ex4.F90  plex_grid.F90  plex_rt.F90  plex_rt_base.F90  plexrt_external_solvers.F90  pprts2plex.F90
python/: CMakeLists.txt  bmc_example.py  py_boxmc.f90  py_eddington.f90  py_param_phi.f90  py_rrtm_lw_sw.f90
rayli_wrapper/: CMakeLists.txt  f2c_rayli.F90  single_wedge_2_rayli.c  tenstr2rayli.c  thermal_wedge_2_rayli.c
repwvl/: CMakeLists.txt  compute_repwvl_training_data.F90  compute_training_data.F90  fu.ice.repwvl.nc  fu.ice.repwvl_solar.nc  fu.ice.repwvl_thermal.nc  fu_ice.F90  gen_fu_ice_tables.py  gen_fu_ice_tables.sh  gen_mie_tables.py  gen_repwvl_mie_tables.sh  mie_tables.F90  opti.py  rayleigh.F90  repwvl_base.F90  repwvl_optprop.F90  repwvl_plexrt.F90  repwvl_pprts.F90
repwvl/data/: fu.ice.general.nc  mie.wc.table.nc  pyada_lw_15.nc  pyada_lw_20.nc  pyada_lw_25.nc  pyada_lw_50.nc  pyada_sw_15.nc  pyada_sw_20.nc  pyada_sw_25.nc  pyada_sw_50.nc  repwvl_solar.lut  repwvl_thermal.lut
repwvl/scripts/: 01_gen_general_tables.sh  02_run_ada_prep.sh  03_run_repwvl_training_data.sh  04_run_ada_optimizer.sh  05_gen_repwvl_tables.sh  06_test_new_optifile.sh  config.sh  gen_fu_ice_tables.py  gen_mie_tables.py  gen_repwvl_mie_tables.sh
rrtmg/: CMakeLists.txt
rrtmg/rrtm_lw/: CMakeLists.txt  mcica_subcol_gen_lw.f90  parkind.f90  parrrtm.f90  plkint.f  rrlw_cld.f90  rrlw_kg03.f90  rrlw_kg05.f90  rrlw_kg07.f90  rrlw_kg08.f90  rrlw_kg09.f90  rrlw_kg11.f90  rrlw_kg12.f90  rrlw_kg15.f90  rrlw_kg16.f90  rrlw_vsn.f90  rrlw_wvn.f90  rrtmg_lw_cldprop.f90  rrtmg_lw_init.f90  rrtmg_lw_rad.nomcica.f90  rrtmg_lw_rtrn.f90  rrtmg_lw_rtrnmc.f90  (+1 more)
specint/: CMakeLists.txt  specint_plexrt.F90  specint_pprts.F90
src/: CMakeLists.txt  LUT_param_phi.F90  adaptive_spectral_integration.F90  adaptive_spectral_integration.f90  arrayio.f90  boxmc.F90  boxmc.f90  boxmc_1_2.inc  boxmc_3_10.inc  boxmc_3_16.inc  boxmc_3_24.inc  boxmc_3_30.inc  boxmc_3_6.inc  boxmc_8_10.inc  boxmc_8_12.inc  boxmc_8_16.inc  boxmc_8_18.inc  boxmc_geometry.F90  boxmc_geometry.f90  boxmc_oop.f90  boxmc_parameters.f90  boxmc_wedge_18_8.inc  boxmc_wedge_5_5.inc  boxmc_wedge_5_8.inc  buildings.F90  c_syscall_constants.c  c_syscall_wrappers.F90  c_syscall_wrappers.f90  createLUT.F90  createLUT_1_2.f90  createLUT_3_10.f90  createLUT_3_6.f90  createLUT_8_10.f90  createLUT_8_12.f90  data_parameters.F90  data_parameters.f90  eddington.F90  eddington.f90  f2c_tenstream.c  f2c_tenstream.f90  (+71 more)
tests/: CMakeLists.txt  test_add_numbers.F90  test_delta_eddington.F90  test_subtract_numbers.F90
(+488 files in other folders)
